--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Netherlands -- Description and travel'
 - !lcc 'DJ'
+- GITenberg
 title: "Door Holland met pen en camera\r\nDe Aarde en haar Volken, 1906"
 url: http://www.gutenberg.org/ebooks/13317
